--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-pyTelegramBotAPI
-yt-dlp
-Flask
-pyTelegramBotAPI
-gunicorn
-yt-dlp
-# va boshqa kerakli paketlar (browser_cookie3, etc.)
+pyTelegramBotAPI==4.12.0
+yt-dlp==2025.10.22
+requests==2.31.0
